feat: implement adding new form component

--- a/src/pages/profile/style.module.scss
+++ b/src/pages/profile/style.module.scss
@@ -49,6 +49,13 @@ h2 {
   position: relative;
 }
 
+.deliveryAddressesContainer,
+.billingAddressesContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+
 .user-password-wrapper {
   display: flex;
   flex-direction: column;
