--- a/src/components/logic/address-form/style.module.scss
+++ b/src/components/logic/address-form/style.module.scss
@@ -1,7 +1,9 @@
 @import '@Src/styles/variables.scss';
 
-.address-wrapper {
+.address-wrapper,
+.base-form {
   max-width: 360px;
+  width: 100%;
 }
 
 .checkbox {
