--- a/src/components/logic/filter-form/style.module.scss
+++ b/src/components/logic/filter-form/style.module.scss
@@ -2,7 +2,6 @@
   background: var(--color-white);
   border-radius: 1rem;
   padding: 0px 0px 2rem 0px;
-  width: 340px;
   max-width: 100%;
   height: max-content;
   display: flex;
@@ -13,8 +12,8 @@
 .container {
   padding: 0 1rem;
   display: flex;
-  flex-direction: column;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .form-header {
@@ -43,19 +42,34 @@
 }
 
 .brand-accordion {
+  width: 335px;
 }
 
 .range-slider {
   margin-bottom: 2rem;
   padding: 0 1rem 1rem;
+  width: 310px;
+  margin-right: 1rem;
 }
 
 .range-slider-caption {
   margin: 0;
 }
 
+.range-slider-container {
+  max-width: 90%;
+  @media screen and (max-width: 1090px) {
+    order: 1;
+  }
+  @media screen and (max-width: 720px) {
+    order: 0;
+  }
+}
+
 .buttons {
   display: flex;
   justify-content: center;
+  align-items: end;
   gap: 1rem;
+  order: 5;
 }
