fix: add a looped circular rotation

--- a/src/components/ui/slider/style.module.scss
+++ b/src/components/ui/slider/style.module.scss
@@ -54,6 +54,10 @@
 .slider-in-modal {
   .wrapper {
     padding-bottom: 2.5rem;
+
+    .image-li {
+      cursor: auto;
+    }
   }
   .controls-panel {
     position: absolute;
