177-rss ecomm 3 18 allow users to manage their addresses (#207)
* feat: implement adding new form component

* feat: add changes to form modes

* feat: implement changing addresses

* feat: add customer version to state

* fix: fix some bugs in the country input

* feat: implement adding new address

* fix: add address type checking

* refactor: move code

* feat: change check to null

* refactor: replace version to controller

* refactor: move console.log

* remove unnessecary code

* refactor: change then to await

* refactor: replace code into new method

* refactor: format code

* feat: implement address removing

* feat: implement setting default address

* feat: implement opening and closing modal window

* fix: fix checkbox overlay

* fix: add address clone

* fix: fix bugs in address form

* feat: implement notifications appearance

* feat: add changes to checkbox and modal styles

* refactor: format code

* fix: add changes to cancel button

--- a/src/components/logic/address-form/style.module.scss
+++ b/src/components/logic/address-form/style.module.scss
@@ -1,7 +1,9 @@
 @import '@Src/styles/variables.scss';
 
-.address-wrapper {
+.address-wrapper,
+.base-form {
   max-width: 360px;
+  width: 100%;
 }
 
 .checkbox {
@@ -53,4 +55,13 @@
 
 .success {
   background-color: rgba(55, 211, 134, 0.9);
+}
+
+.modal-form {
+  padding: 2rem;
+}
+
+.modal > div:first-child {
+  padding: 2rem 1.5rem;
+  width: auto;
 }
