fix: card height

--- a/src/pages/catalogue/style.module.scss
+++ b/src/pages/catalogue/style.module.scss
@@ -5,6 +5,7 @@
 .content-section {
   display: grid;
   justify-content: center;
+  align-items: flex-start;
   gap: 2.25rem;
   grid-template-columns: 340px minmax(300px, 1fr);
   @media screen and (max-width: 1448px) {
