--- a/src/pages/profile/style.module.scss
+++ b/src/pages/profile/style.module.scss
@@ -157,3 +157,10 @@ h2 {
   padding: 2rem 1.5rem;
   width: 360px;
 }
+
+.invalid-password {
+  color: var(--main-alarm-color);
+  font-size: 1.1rem;
+  margin-bottom: 0.9rem;
+  text-align: center;
+}
