--- a/src/components/ui/modal/style.module.scss
+++ b/src/components/ui/modal/style.module.scss
@@ -22,10 +22,13 @@
 }
 .cross {
   position: absolute;
-  top: 0.75rem;
-  right: 0.25rem;
-  width: 1.5rem;
-  height: 1.5rem;
+  border: none;
+  background-color: var(--color-grey-extra-light);
+  top: 1rem;
+  right: 1rem;
+  width: 2rem;
+  height: 2rem;
+  transition: transform ease-in-out 0.3s;
   cursor: pointer;
   svg {
     width: 1rem;
@@ -33,5 +36,8 @@
     path {
       fill: var(--color-black);
     }
+  }
+  &:hover {
+    transform: rotateY(180deg);
   }
 }
