Fix/profile form (#213)
* feat: add changes to password component

* feat: implement modal window appearance

* feat: implement password updating

* feat: add personal data into modal

* fix: fix inputs validation

* feat: add breadcrumbs to profile page

* feat: add error text

* feat: add logout

* feat: add error notification

* feat: remove modal for personal details

* fix: not correct checking default addresses

* fix: cross button in form

* fix: error handlers

* fix: clear warnings

* refactor: remove console.log

* fix: some styles in slider

---------

Co-authored-by: Yanina Lysukha <yanina.lysukha@gmail.com>

--- a/src/components/ui/modal/style.module.scss
+++ b/src/components/ui/modal/style.module.scss
@@ -13,7 +13,6 @@
 .modal {
   border: 6px solid var(--color-black);
   border-radius: 2rem;
-  padding: 0.5rem;
   overflow: hidden;
   background-color: var(--color-grey-extra-light);
   width: fit-content;
@@ -22,10 +21,13 @@
 }
 .cross {
   position: absolute;
-  top: 0.75rem;
-  right: 0.25rem;
-  width: 1.5rem;
-  height: 1.5rem;
+  border: none;
+  background-color: transparent;
+  top: 1rem;
+  right: 1rem;
+  width: 2rem;
+  height: 2rem;
+  transition: transform ease-in-out 0.3s;
   cursor: pointer;
   svg {
     width: 1rem;
@@ -33,5 +35,8 @@
     path {
       fill: var(--color-black);
     }
+  }
+  &:hover {
+    transform: rotateY(180deg);
   }
 }
