--- a/src/components/ui/modal/style.module.scss
+++ b/src/components/ui/modal/style.module.scss
@@ -27,9 +27,9 @@
   right: 1rem;
   width: 2rem;
   height: 2rem;
-  transition: transform ease-in-out 0.3s;
   cursor: pointer;
   svg {
+    transition: transform ease-in-out 0.3s;
     width: 1rem;
     height: 1rem;
     path {
@@ -37,6 +37,8 @@
     }
   }
   &:hover {
-    transform: rotateY(180deg);
+    svg {
+      transform: rotateY(180deg);
+    }
   }
 }
