feat: add rest components to the page

--- a/src/pages/about/style.module.scss
+++ b/src/pages/about/style.module.scss
@@ -1,17 +1,17 @@
 @import '@Src/styles/variables.scss';
 
 .about {
- background-color: var(--color-white);
- border-radius: 24px;
- padding: 24px 32px;
- margin-top: 32px;
+  background-color: var(--color-white);
+  border-radius: 24px;
+  padding: 24px 32px;
+  margin-top: 32px;
 }
 
 .main-title {
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 125%;
-    margin: 0;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 125%;
+  margin: 0;
 }
 
 .team-members-wrapper {
@@ -26,4 +26,12 @@ article {
 .team-members-wrapper article:nth-child(even) {
   flex-direction: row-reverse;
   justify-content: space-between;
+}
+
+.rss-link {
+    display: block;
+    background: url('/src/assets/icons/rs_school_logo-light.svg') no-repeat center;
+    background-size: contain;
+    width: 10.75rem;
+  height: 4rem;
 }
