--- a/src/components/ui/team-member/style.module.scss
+++ b/src/components/ui/team-member/style.module.scss
@@ -11,7 +11,7 @@
 }
 
 .info-list {
-  padding-left: 25px;
+  padding-left: 1.56rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -32,8 +32,28 @@
 }
 
 .member-info-wrapper {
-  padding: 36px 0px;
+  padding: 2.25rem 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media (max-width: 978px) {
+  article {
+    margin: 0.625rem 0px;
+  }
+
+  .member-info-wrapper {
+    padding: 0;
+  }
+
+  .info-list {
+    gap: 0.4rem;
+  }
+}
+
+@media (max-width: 720px) {
+  article {
+    flex-direction: column;
+  }
 }
