feat: add styles to links

--- a/src/components/ui/team-member/style.module.scss
+++ b/src/components/ui/team-member/style.module.scss
@@ -27,6 +27,11 @@
 
     a {
       color: var(--color-black);
+      transition: color var(--transition-time);
+
+      &:hover {
+        color: var(--color-orange-main);
+      }
     }
   }
 }
