--- a/src/components/ui/button/style.module.scss
+++ b/src/components/ui/button/style.module.scss
@@ -8,17 +8,14 @@
   justify-content: center;
   align-items: center;
   transition: background-color var(--transition-time);
-  display: flex;
-  align-items: center;
   cursor: pointer;
   &:disabled {
     background-color: var(--color-grey-light);
     pointer-events: none;
   }
-}
-
-.hidden {
-  display: none;
+  &[hidden] {
+    display: none;
+  }
 }
 
 .normal {
@@ -100,4 +97,8 @@
     color: var(--color-white);
     pointer-events: none;
   }
+}
+
+.hidden {
+  display: none;
 }
