--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -62,11 +62,34 @@
 
 .basket {
   cursor: pointer;
+  position: relative;
 }
 
 .basket-icon svg {
-  width: 2.344rem;
-  height: 2.344rem;
+  width: 38px;
+  height: 38px;
+}
+
+.basket-count {
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  background: var(--color-orange-light);
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  text-align: center;
+  color: var(--color-black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: -1rem;
+  bottom: -0.375rem;
+  &_hidden {
+    display: none;
+  }
 }
 
 .navigation-list {
