--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -36,7 +36,7 @@
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  gap:2rem;
+  gap: 2rem;
   padding: 1rem 0;
 }
 
@@ -46,7 +46,7 @@
   gap: 3rem;
   grid-area: 1 / 5 / 2 / 13;
 }
-.prod-row-name{
+.prod-row-name {
   grid-area: 1 / 2 / 2 / 5;
   width: fit-content;
 }
@@ -83,7 +83,7 @@
 .prodRowPrices {
   display: flex;
   justify-content: flex-start;
-    gap: 1rem;
+  gap: 1rem;
 }
 
 .prod-row-discount {
@@ -141,67 +141,67 @@
   }
   .prod-row {
     grid-template-columns: 7rem 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 1.5rem 1rem;
-  grid-template-areas:
-    "IMAGE NAME NAME"
-    "IMAGE PRICE PRICE"
+    grid-template-rows: 1fr 1fr;
+    gap: 1.5rem 1rem;
+    grid-template-areas:
+      'IMAGE NAME NAME'
+      'IMAGE PRICE PRICE';
   }
   .prod-row-img-wrapper {
     width: auto;
     height: auto;
     grid-area: IMAGE;
   }
-  .prod-row-name{
+  .prod-row-name {
     grid-area: NAME;
   }
   .prod-row-right {
-    grid-area:PRICE;
+    grid-area: PRICE;
   }
-  .prod-row-cross{
+  .prod-row-cross {
     display: none;
   }
   .prod-row {
     position: relative;
   }
-  .prod-row-trash{
+  .prod-row-trash {
     position: absolute;
-    top:1.5rem;
+    top: 1.5rem;
     right: 0;
   }
-  .prod-row-name{
+  .prod-row-name {
     padding-right: 2rem;
   }
 }
 @media (max-width: 580px) {
   .prod-row {
-  grid-template-columns: 7rem 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 1.5rem 1.5rem;
-  grid-template-areas:
-    "IMAGE NAME NAME"
-    "IMAGE PRICE PRICE"
-    "IMAGE PRICE PRICE"
-    "IMAGE PRICE PRICE"
+    grid-template-columns: 7rem 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1.5rem 1.5rem;
+    grid-template-areas:
+      'IMAGE NAME NAME'
+      'IMAGE PRICE PRICE'
+      'IMAGE PRICE PRICE'
+      'IMAGE PRICE PRICE';
   }
   .prod-row-prices-and-count {
     flex-direction: column;
     align-items: flex-start;
   }
   .prod-row-right {
-    grid-area:PRICE;
+    grid-area: PRICE;
     justify-content: flex-start;
     align-items: flex-end;
     gap: 1.5rem;
   }
-  .prod-row-total-price{
-    font-size:1.25rem;
+  .prod-row-total-price {
+    font-size: 1.25rem;
     line-height: 2.5rem;
   }
 }
 @media (max-width: 420px) {
-  .prod-row-total-price{
-    font-size:1rem;
+  .prod-row-total-price {
+    font-size: 1rem;
     line-height: 2.5rem;
   }
 }
