--- a/src/pages/product/style.module.scss
+++ b/src/pages/product/style.module.scss
@@ -51,17 +51,31 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 1rem;
-  @media (max-width: 1080px) {
+  @media (max-width: 520px) {
     flex-direction: column;
     gap: 1.5rem;
   }
+  container-type: inline-size;
+  container-name: price-wrapper;
 }
+
 .product-price-wrapper {
   display: flex;
   font-size: 1.5rem;
   line-height: 2rem;
   gap: 0.75rem;
+  flex-grow: 1;
 }
+
+@container price-wrapper (max-width: 520px) {
+  .product-price-wrapper {
+    width: 100%;
+  }
+  button {
+    width: 100%;
+  }
+}
+
 .price-title {
   color: var(--color-grey-dark);
 }
