--- a/src/pages/product/style.module.scss
+++ b/src/pages/product/style.module.scss
@@ -48,17 +48,34 @@
 .product-price-row {
   display: flex;
   justify-content: space-between;
-  @media (max-width: 1080px) {
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  @media (max-width: 520px) {
     flex-direction: column;
     gap: 1.5rem;
   }
+  container-type: inline-size;
+  container-name: price-wrapper;
 }
+
 .product-price-wrapper {
   display: flex;
   font-size: 1.5rem;
   line-height: 2rem;
   gap: 0.75rem;
+  flex-grow: 1;
 }
+
+@container price-wrapper (max-width: 520px) {
+  .product-price-wrapper {
+    width: 100%;
+  }
+  button {
+    width: 100%;
+  }
+}
+
 .price-title {
   color: var(--color-grey-dark);
 }
@@ -72,7 +89,13 @@
   text-decoration: line-through;
 }
 .button {
+  margin-left: auto;
 }
+
+.button_remove {
+  margin-left: auto;
+}
+
 .attribute-list {
   margin: 0;
   padding-left: 0;
@@ -124,4 +147,8 @@
   @media (max-width: 1080px) {
     min-width: 100%;
   }
+}
+
+.hidden {
+  display: none;
 }
