feat: center the button

--- a/src/pages/catalogue/style.module.scss
+++ b/src/pages/catalogue/style.module.scss
@@ -64,4 +64,8 @@
 .show-more-btn {
   background-color: var(--color-orange-light);
   width: 212px;
+  grid-column: 2;
+  margin: auto;
+  margin-top: 1.25rem;
+  margin-bottom: 1.81rem;
 }
