feat: implement change in product quantity with API

--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -76,7 +76,7 @@
 .prod-row-right {
   display: flex;
   justify-content: flex-end;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 
 .prod-row-prices-and-count {
@@ -85,7 +85,7 @@
   gap: 1.5rem;
   color: var(--color-grey);
 }
-.prodRowPrices {
+.prod-row-prices {
   display: flex;
   justify-content: flex-start;
   gap: 1rem;
@@ -139,6 +139,10 @@
       }
     }
   }
+}
+.prod-row-total-price {
+  width: 5rem;
+  text-align: center;
 }
 
 .empty-message {
@@ -215,6 +219,7 @@
     gap: 1.5rem;
   }
   .prod-row-total-price {
+    width: max-content;
     font-size: 1.25rem;
     line-height: 2.5rem;
   }
@@ -224,4 +229,18 @@
     font-size: 1rem;
     line-height: 2.5rem;
   }
+}
+.row-after-list {
+  display: flex;
+}
+.total-price-row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  gap: 1.5rem;
+}
+.total-price {
+  color: var(--color-orange-main);
 }
