--- a/src/components/ui/spinner-input/style.module.scss
+++ b/src/components/ui/spinner-input/style.module.scss
@@ -10,6 +10,7 @@
   border: none;
   text-align: center;
   background: var(--color-white);
+  pointer-events: none;
 }
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
