--- a/src/components/logic/cart-row/style.module.scss
+++ b/src/components/logic/cart-row/style.module.scss
@@ -21,6 +21,16 @@
 .prod-row-name {
   grid-area: 1 / 2 / 2 / 5;
   width: fit-content;
+  text-decoration: none;
+  color:var(--color-black);
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      color: var(--color-orange-main);
+    }
+  }
+  &:active {
+    color: var(--color-orange-main);
+  }
 }
 .prod-row-img-wrapper {
   border-radius: 0.5rem;
@@ -63,6 +73,7 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+
     &::after {
       content: 'SALE';
       font-size: 1.5rem;
@@ -71,6 +82,8 @@
       padding: 0 1rem;
       color: var(--color-white);
       background-color: var(--color-blue);
+      pointer-events: none;
+      text-decoration: none;
       @media (max-width: 480px) {
         display: none;
       }
