feat: implement button 'clear cart'

--- a/src/components/logic/cart-row/style.module.scss
+++ b/src/components/logic/cart-row/style.module.scss
@@ -8,8 +8,9 @@
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+  align-items: center;
   gap: 2rem;
-  padding: 1rem 0;
+  padding: 0;
 }
 
 .prod-row-right {
