feat: add modal with a confirmation prompt

--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -75,3 +75,16 @@
 .total-price {
   color: var(--color-orange-main);
 }
+.modal-wrapper{
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+
+}
+.modal-button-row{
+  display: flex;
+  gap: 2rem;
+
+}
