Faet/apply promo code in cart (#253)
* feat: add form for promocode

* fix: bug with icon button on catalog page

* feat: start with API

* refactor: format

* refactor: comment out broken code

--- a/src/components/ui/modal/style.module.scss
+++ b/src/components/ui/modal/style.module.scss
@@ -14,7 +14,7 @@
   border: 6px solid var(--color-black);
   border-radius: 2rem;
   overflow: hidden;
-  background-color: var(--color-grey-extra-light);
+  background-color: var(--color-white);
   width: fit-content;
   height: fit-content;
   position: relative;
