--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -64,6 +64,19 @@
 
 .row-after-list {
   display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 1rem;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 2rem;
+  }
+}
+.button-clear {
+  @media (max-width: 480px) {
+    width: 100%;
+  }
 }
 .total-price-row {
   display: flex;
@@ -85,4 +98,12 @@
 .modal-button-row {
   display: flex;
   gap: 2rem;
+}
+.form {
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+}
+.formButton {
+  padding: 0.7rem 1.75rem;
 }
