--- a/src/components/logic/product-list/style.module.scss
+++ b/src/components/logic/product-list/style.module.scss
@@ -1,7 +1,20 @@
-.product-list {
+.products-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
   gap: 2.25rem 1.5rem;
+}
+
+.show-more-btn {
+  background-color: var(--color-orange-light);
+  width: 212px;
+  grid-column: 2;
+  margin: auto;
+  margin-top: 1.25rem;
+  margin-bottom: 1.81rem;
+
+  &:hover {
+    background-color: var(--color-orange-extra-light);
+  }
 }
