feat: add styles to home page

--- a/src/pages/main/style.module.scss
+++ b/src/pages/main/style.module.scss
@@ -31,4 +31,13 @@
 
 .cards-title {
   color: var(--color-orange-main);
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 112%;
+  text-align: center;
+  margin: 1.5rem 0 3.5rem;
+}
+
+.cards-container {
+  margin-bottom: 5.5rem;
 }
