--- a/src/pages/main/style.module.scss
+++ b/src/pages/main/style.module.scss
@@ -29,7 +29,15 @@
   }
 }
 
-.cards-title {
+.about-info {
+  border-radius: 24px;
+  padding: 32px 145px 64px 145px;
+  background: var(--color-white);
+  margin: 1.5rem;
+}
+
+.cards-title,
+.about-title {
   color: var(--color-orange-main);
   font-size: 3rem;
   font-weight: 700;
@@ -38,6 +46,27 @@
   margin: 1.5rem 0 3.5rem;
 }
 
+.about-title {
+  margin: 2rem 0 3.5rem;
+}
+
 .cards-container {
-  margin-bottom: 5.5rem;
+  margin-bottom: 4rem;
+}
+
+.about-content-wrapper {
+  display: flex;
+  gap: 3.78rem;
+}
+
+.team-message {
+  text-align: right;
+  font-style: italic;
+  margin-top: 3.75rem;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
