--- a/src/pages/main/style.module.scss
+++ b/src/pages/main/style.module.scss
@@ -31,9 +31,32 @@
 
 .about-info {
   border-radius: 24px;
-  padding: 32px 145px 64px 145px;
+  padding: 32px 145px 64px;
   background: var(--color-white);
   margin: 1.5rem;
+}
+
+p {
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+.first-sentence {
+  margin-top: 16px;
+}
+
+@media (max-width: 1616px) {
+  .about-info {
+    padding: 32px 100px 64px;
+  }
+  .first-sentence {
+    margin-top: 0;
+  }
+}
+@media (max-width: 1400px) {
+  .about-info {
+    padding: 32px 50px 64px;
+  }
 }
 
 .cards-title,
@@ -49,6 +72,33 @@
 .about-title {
   margin: 2rem 0 3.5rem;
 }
+@media (max-width: 760px) {
+  .cards-title,
+  .about-title {
+    font-size: 38px;
+  }
+}
+
+@media (max-width: 560px) {
+  .about-info {
+    padding: 32px 17.5px 48px;
+    margin: 24px 16px;
+  }
+  
+  .cards-title {
+    font-size: 32px;
+    line-height: 169%;
+  }
+  .about-title {
+    margin: 0;
+    font-size: 28px;
+    line-height: 193%;
+  }
+  .cards-title,
+  .about-title {
+    margin-bottom: 32px;
+  }
+}
 
 .cards-container {
   margin-bottom: 4rem;
@@ -59,14 +109,41 @@
   gap: 3.78rem;
 }
 
+.text-wrapper {
+  width: 54%;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 1180px) {
+  .about-content-wrapper {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .text-wrapper {
+    width: 100%;
+  }
+}
+
 .team-message {
   text-align: right;
   font-style: italic;
+  margin: 0;
   margin-top: 3.75rem;
+}
+@media (max-width: 560px) {
+  .team-message {
+    width: 70%;
+    align-self: flex-end;
+  }
+}
+
+.image-wrapper {
+  border-radius: 1rem;
 }
 
 img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
+  border-radius: 1rem;
 }
