--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -2,7 +2,7 @@
 
 .cart {
   background: var(--color-white);
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 2rem;
   border-radius: 1.5rem;
   margin-top: 1.5rem;
   margin-bottom: 2.5rem;
@@ -104,6 +104,20 @@
   align-items: flex-start;
   gap: 1.5rem;
 }
-.formButton {
+.form-button {
   padding: 0.7rem 1.75rem;
+}
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 4rem;
+}
+.promo-code-message {
+  font-size: 0.75rem;
+  color: var(--color-green);
+  margin-top: -0.75rem;
+  margin-left: 0.25rem;
+}
+.error {
+  color: var(--color-red-main);
 }
