--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -84,6 +84,10 @@
   font-size: 1.5rem;
   line-height: 2rem;
   gap: 1.5rem;
+  align-items: center;
+  @media (max-width: 480px) {
+    gap: 1rem;
+  }
 }
 .total-price {
   color: var(--color-orange-main);
