feat: add color for total old price

--- a/src/pages/cart/style.module.scss
+++ b/src/pages/cart/style.module.scss
@@ -126,5 +126,7 @@
   color: var(--color-red-main);
 }
 .total-price-old {
+  color: var(--color-orange-light);
+  font-weight: 300;
   text-decoration: line-through;
 }
